Updated package.json with homepage link

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://hugoquintal01.github.io/product-react-app",
   "name": "product-react-app",
   "version": "0.1.0",
   "private": true,
